# simulated-file-system

./: .gitignore  CMakeLists.txt  README.md  common.c  common.h  tests
lib/: libfs.c  libfs.h  libfs_tests.c  presentation.c  presentation_from_backup.c  send_file.txt
service/: inode.c  inode.h  operations.c  operations.h  req_buffer.c  req_buffer.h  service  service.c  service.h
test/: test-libfs.c  test-main.c
